# Pentapod-Code

./: .gitignore
Common/: .cproject  .project
Common/Default/: makefile
Common/src/: CortexComPackage.cpp  CortexComPackage.h  core.cpp  core.h
Cortex/: .cproject  .project  BotMemory.cpp  BotMemory.h  Config.cpp  Config.h  Controller.cpp  Controller.h  HerkulexServoDrive.cpp  HerkulexServoDrive.h  HostCommunication.cpp  HostCommunication.h  I2CSlave.cpp  I2CSlave.h  Leg.cpp  Leg.h  MotorBase.h  OrientationSensor.cpp  OrientationSensor.h  PowerVoltage.cpp  PowerVoltage.h  main.cpp  pins.h
Cortex/Release/: makefile
Cortex/utilities/: I2CPortScanner.cpp  I2CPortScanner.h  MemoryBase.cpp  MemoryBase.h  SerialCommand.cpp  SerialCommand.h  Space.h  TimePassedBy.h  utilities.h  watchdog.cpp  watchdog.h
GLUI/: .cproject  .project
GLUI/Default/: makefile
Kinematics/: .cproject  .project
Kinematics/Default/: makefile
Kinematics/src/: BezierCurve.cpp  BezierCurve.h  BodyKinematics.cpp  BodyKinematics.h  CortexClient.cpp  CortexClient.h  DenavitHardenbergParam.cpp  DenavitHardenbergParam.h  Engine.cpp  Engine.h  EngineState.cpp  EngineState.h  GaitController.cpp  GaitController.h  I2CMaster.cpp  I2CMaster.h  LaserScan.cpp  LaserScan.h  LegKinematics.cpp  LegKinematics.h  Map.cpp  Map.h  Trajectory.cpp  Trajectory.h  Util.cpp  Util.h  setup.h  spatial.cpp  spatial.h  spatial.inl
Planner/: .cproject  .project
Planner/src/: main.cpp  (+15 more)
Server/: .cproject
poco-1.7.6/: MANIFEST  VERSION  config.make
ros/src/pentapod_library/: CMakeLists.txt  Makefile  package.xml
(+163 files in other folders)
