<?xml version="1.0"?>
<package>
  <name>pentapod_library</name>
  <version>0.0.0</version>
  <description>Contains a library that takes care of the walking of the pentapod</description>
  <maintainer email="jochenalt@gmx.net">Jochen Alt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <run_depend>roscpp</run_depend>

</package>
